kic/extService-Calculator-Ingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: calculator-extsvc
  name: calculator-extsvc
  annotations:
    konghq.com/path: /calculator.asmx
    konghq.com/host-header: www.dneonline.com
spec:
  externalName: www.dneonline.com
  selector:
    app: calculator-extsvc
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/preserve-host: 'false'
    #konghq.com/plugins: calculator-soap-xml-request-handling
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /calculator
        pathType: Prefix
        backend:
          service:
             name: calculator-extsvc
             port:
               number: 80
---
#-----------------------------------------------------
# Gateway API: HTTPRoute ('Ingress' kind replacement)
#-----------------------------------------------------
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
# name: calculator-route
# annotations:
#   konghq.com/strip-path: 'true'
#   konghq.com/preserve-host: 'false'
#   konghq.com/plugins: calculator-soap-xml-request-handling
#spec:
# parentRefs:
# - name: kong
#   namespace: kong
# rules:
# - matches:
#   - path:
#       type: PathPrefix
#       value: /calculator
#   backendRefs:
#   - name: calculator-extsvc
#     kind: Service
#     port: 80
